--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,22 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: check-toml
+      - id: check-yaml
+        args: ["--unsafe"]
+      - id: check-merge-conflict
+      - id: check-added-large-files
+        args: ["--maxkb=500"]
+        exclude: (?x)(
+          ^example/_*.csv
+          )
+      - id: check-symlinks
+      - id: requirements-txt-fixer
+      - id: forbid-new-submodules
+      - id: detect-aws-credentials
+        args: ["--allow-missing-credentials"]
+      - id: detect-private-key
+
   - repo: https://github.com/PyCQA/pylint
     rev: v3.2.6
     hooks:
