--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ['setuptools>=61.0.0', 'wheel']
+requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -17,6 +17,3 @@ dependencies = ["requests", 'importlib-metadata; python_version<"3.10"']
 [black]
 line-length = 99
 exclude = ["venv"]
-
-# ... other project metadata fields as listed in:
-#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
