--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
-version = "0.0.0"
+version = "0.0.1"
 name = "py-teamup-api"
 authors = [{ name = "Tony", email = "cordial.egg1739@fastmail.com" }]
 description = "A package for managing Teamup's resources."
@@ -11,9 +11,14 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT License" }
 classifiers = ["Programming Language :: Python :: 3"]
-dependencies = ["requests", 'importlib-metadata; python_version<"3.10"']
+dependencies = [
+    "requests",
+    "python-dotenv",
+    'importlib-metadata; python_version<"3.10"',
+]
 
-
-[black]
-line-length = 99
-exclude = ["venv"]
+[project.optional-dependencies]
+test = ["pytest", "pytest-cov"]
+static-code-qa = ['pre-commit']
+release = ["build", "twine"]
+dev = ["py-teamup-api[test, release, static-code-qa]"]
