--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,25 +10,92 @@ on:
 
 jobs:
 
-  build-test-and-publish:
+  check-version-txt:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Tag with the release version
+        run: |
+          git tag $(cat version.txt)
+
+
+  lint-format-and-static-qa:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: format and lint
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.12
+      - name: install pre-commit
+        run: |
+          pip install pre-commit
+      - name: lint, format, and other static code quality checks
+        run: |
+          /bin/bash -x run.sh lint:ci
+
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Set Up Python 3.12
         uses: actions/setup-python@v3
         with:
           python-version: 3.12
-      - run: |
-          /bin/bash run.sh install
-          /bin/bash run.sh build
-          /bin/bash run.sh publish:test
+
+      - name: Install build CLI
+        run: |
+          pip install build
+
+      - name: Build Python package
+        run: /bin/bash -x run.sh build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: python package
+          path: ./dist/*
+
+
+  publish:
+    needs:
+      - build
+      - lint-format-and-static-qa
+      - check-version-txt
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set Up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.12
+
+      - name: Download wheel and sdist
+        uses: actions/download-artifact@v4
+        with:
+          name: python package
+          path: ./dist/
+
+      - name: Install twine
+        run: |
+          pip install twine
+
+      - name: Pusblish to TestPyPI
+        run: |
+          /bin/bash -x run.sh publish:test
         env:
           TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
 
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install pre-commit
-      # - name: Analyse the code with pre-commit
-      #   run: |
-      #     SKIP=no-commit-to-branch pre-commit run --all-files
+      - name: Pusblish to ProdPyPI
+        run: |
+          /bin/bash -x run.sh publish:prod
+        env:
+          TEST_PYPI_TOKEN: ${{ secrets.PROD_PYPI_TOKEN }}
+
+      - name: Tag release version
+        run: |
+          git push origin --tags
